<resources>
    <string name="app_name">RestaurantApplicationGraduationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="choose_order">Choose Order With Yiyeceksepeti</string>
    <string name="explanation">You can choose meals which is added for the restaurants from application</string>
    <string name="delivery">Fast Delivery</string>
    <string name="delivery_explanation">Your orders delivered as fastest as possible for you</string>
    <string name="enjoy_your_food">Enjoy Your Meal</string>
    <string name="enjoyMeal">At the end eat your food with family</string>


    <!--Login Screen String-->
    <string name="loginEmailInput">  Your Email</string>
    <string name="loginTextUI">Login</string>
    <string name="loginUIText">Add your details to login</string>
    <string name="passwordInputLoginUI">Password</string>
    <string name="loginUIButtonText">Login</string>
    <string name="textLoginButtonRegister">Register</string>
    <string name="loginScreenLogin">Login</string>
    <string name="loginScreenPleaseEnter">Please enter your account here</string>
    <string name="loginScreenEmailInput">Your Email</string>
    <string name="loginScreenPasswordInput">Password</string>
    <string name="loginScreenLoginButton">Login</string>
    <string name="loginScreenDontAccount">Don\'t you have an account?</string>
    <string name="loginScreenRegisterText">Register</string>

    <string-array name="Cuisines">
        <item>Seafood</item>
        <item>Burger</item>
        <item>Breakfast</item>
        <item>Kebab</item>
        <item>Pasta - Salad</item>
        <item>Pasta</item>
        <item>Bakery</item>
        <item>Pizza</item>
        <item>Dessert</item>
    </string-array>

    <string name="all_restaurants">All</string>

    <!--Splash  Screen String-->
    <string name="appName">Yiyeceksepeti</string>

    <!--Meal Detail Screen String-->
    <string name="mealDetailTotal">TOTAL</string>
    <string name="orderNowButtonString">ORDER NOW</string>

    <!--Last Order Screen String-->
    <string name="lastOrderString">Last Orders</string>

    <!--Restaurant List Screen String-->
    <string name="restaurantListScreen">Restaurant List</string>
    <string name="restaurantListScreenNotFoundText">Not Found</string>

    <!--Register  Screen String-->
    <string name="registerScreenRegisterText">Register</string>
    <string name="registerScreenPleaseEnter">Please enter your informations for register</string>
    <string name="registerScreenPasword">Password</string>
    <string name="registerScreenEmail">Email</string>
    <string name="registerScreenName">Name</string>
    <string name="registerScreenButton">Register</string>

    <!--OnBoarding  Screen String-->
    <string name="onBoardingNextButtonText">Next</string>
    <string name="onBoardingPrevButtonText">Prev</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="completeProfilePhone">Phone</string>
    <string name="completeAddressEdittext">Address</string>
    <string name="completeUIText">Complete Profile</string>
    <string name="completeProfileUpdateText">Update Profile Informations</string>
    <string name="completeProfileButtonText">Update Profile</string>

</resources>